# flask-oidc

./: .gitignore  .packit.yaml  .pre-commit-config.yaml  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  comment-on-release.yml  main.yml
.reuse/: dep5
docs/: changelog.md  changelog.rst  conf.py  index.rst
flask_oidc/: __init__.py  views.py
tests/: app.py  authlib_utils.py  client_secrets.json  conftest.py  requirements-tests.txt  test_flask_oidc.py
