[metadata]
name = flask-oidc
version = 2.0.0
description = OpenID Connect extension for Flask
long_description = file:README.rst
author = Erica Ehrhardt, Patrick Uiterwijk, Aurélien Bompard
author_email = admin@fedoraproject.org
url = https://github.com/fedora-infra/flask-oidc
license = BSD
classifiers =
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = flask_oidc
python_requires = >=3.8
install_requires =
    Flask
    Authlib
    requests

[bdist_wheel]
universal = 1

[coverage:run]
branch = True
source = flask_oidc
# omit =

[coverage:report]
precision = 2
fail_under = 100
exclude_lines =
    pragma: no cover
    def __repr__
    if TYPE_CHECKING:
    raise NotImplementedError
    \.\.\.
show_missing = True
